--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                         <span>
                             <i class="fa-solid fa-envelope"></i>
                         </span>
-                        <a href="mailto:cecskiran23@gmail.com">cecskiran23@gmail.com</a>
+                        <a href="mailto:cecskiran23@gmail.com">Click Here To MailUs</a>
                     </li>
                 </ul>
             </div>
